--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,8 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio">Studio</span>
           </a>
           <ul class="nav-links">
             <li class="item">
@@ -64,221 +65,248 @@
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="filter set-of-buttons">
             <li class="filter-item">
-              <button type="button" class="filter-button all">
-                Все
-              </button>
+              <button type="button" class="filter-button all">Все</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">
-                Веб-сайты
-              </button>
+              <button type="button" class="filter-button">Веб-сайты</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">
-                Приложения
-              </button>
+              <button type="button" class="filter-button">Приложения</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">
-                Дизайн
-              </button>
+              <button type="button" class="filter-button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">
-                Маркетинг
-              </button>
+              <button type="button" class="filter-button">Маркетинг</button>
             </li>
           </ul>
           <!-- Ассортимент -->
           <ul class="positions set-of-cards">
-              <li class="item">
-              <a href="" class="positions-link">  
+            <li class="item">
+              <a href="" class="positions-link">
                 <div class="card-slider">
-                <img
-                src="./images/technohryak.jpg"
-                alt="Изображение сайта на ноутбуке"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
-            </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">Технокряк</h2>
-                <p class="type-of-position">Веб-сайт</p>
-              </div></a>
+                  <img
+                    src="./images/technohryak.jpg"
+                    alt="Изображение сайта на ноутбуке"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">Технокряк</h2>
+                  <p class="type-of-position">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="item">
               <a href="" class="positions-link">
-                <div class="card-slider">              
-              <img
-                src="./images/poster.jpg"
-                alt="Постер команд нового орлеана и голден старс"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                <div class="card-slider">
+                  <img
+                    src="./images/poster.jpg"
+                    alt="Постер команд нового орлеана и голден старс"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Постер
-                  <span lang="en">Orlean vs Golden Star</span>
-                </h2>
-                <p class="type-of-position">Дизайн</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Постер
+                    <span lang="en">Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="type-of-position">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/seafood.jpg"
-                alt="Изображение логотипа ресторана Seafood"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/seafood.jpg"
+                    alt="Изображение логотипа ресторана Seafood"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Ресторан
-                  <span lang="en">Seafood</span>
-                </h2>
-                <p class="type-of-position">Приложение</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Ресторан
+                    <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="type-of-position">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/headphones.jpg"
-                alt="Изображение Наушников"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/headphones.jpg"
+                    alt="Изображение Наушников"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Проект
-                  <span lang="en">Prime</span>
-                </h2>
-                <p class="type-of-position">Маркетинг</p>
-              </div>
-            </a>
-            </li>
-            <li class="item">
-              <a href="" class="positions-link">
-                <div class="card-slider">
-              <img
-                src="./images/boxes.jpg"
-                alt="Изображение коробочек"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Проект
+                    <span lang="en">Prime</span>
+                  </h2>
+                  <p class="type-of-position">Маркетинг</p>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Проект
-                  <span lang="en">Boxes</span>
-                </h2>
-                <p class="type-of-position">Приложение</p>
-              </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/display.jpg"
-                alt="Изображение сайта на экране монитора"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/boxes.jpg"
+                    alt="Изображение коробочек"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position" lang="en">
-                  Inspiration has no Borders
-                </h2>
-                <p class="type-of-position">Веб-сайт</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Проект
+                    <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="type-of-position">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/book.jpg"
-                alt="Изображение развернутой книги"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/display.jpg"
+                    alt="Изображение сайта на экране монитора"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Издание
-                  <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="type-of-position">Дизайн</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="type-of-position">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/label.jpg"
-                alt="Изображение бирки"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/book.jpg"
+                    alt="Изображение развернутой книги"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position">
-                  Проект
-                  <span lang="en">LAB</span>
-                </h2>
-                <p class="type-of-position">Маркетинг</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Издание
+                    <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="type-of-position">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="positions-link">
                 <div class="card-slider">
-              <img
-                src="./images/notebook.jpg"
-                alt="Человек работает за ноутбуком"
-                width="370"
-              />
-              <div class="slider-text">
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
-                платформу для цифрового шпионажа и атак на защищённые
-                 сервера конкурентов.</p></div>
+                  <img
+                    src="./images/label.jpg"
+                    alt="Изображение бирки"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              <div class="descriptions">
-                <h2 class="name-of-position" lang="en">Growing Business</h2>
-                <p class="type-of-position">Приложение</p>
-              </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position">
+                    Проект
+                    <span lang="en">LAB</span>
+                  </h2>
+                  <p class="type-of-position">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="positions-link">
+                <div class="card-slider">
+                  <img
+                    src="./images/notebook.jpg"
+                    alt="Человек работает за ноутбуком"
+                    width="370"
+                  />
+                  <div class="slider-text">
+                    <p>
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
+                <div class="descriptions">
+                  <h2 class="name-of-position" lang="en">Growing Business</h2>
+                  <p class="type-of-position">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -289,7 +317,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-contacts">
-          <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio">Studio</span>
           </a>
           <address class="footer-address">
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
@@ -308,7 +337,7 @@
           </address>
         </div>
 
-        <div class="subscribe">
+        <div class="enjoy">
           <strong class="title">присоединяйтесь</strong>
           <ul class="footer-icon-box">
             <li class="footer-link">
@@ -340,6 +369,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe">
+          <strong class="title">подпишитесь на рассылку</strong>
+          <form action="#" name="subscribe" class="subscribe-form">
+            <div class="subscribe-boxes">
+              <input
+                name="subscribe-input"
+                class="subscribe-input-mail"
+                type="email"
+                autocomplete="on"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="button">
+                Подписаться<svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
