--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio">Studio</span>
           </a>
           <ul class="nav-links">
             <li class="item">
@@ -60,9 +61,7 @@
     <main>
       <section class="hero section">
         <div class="container hero-container">
-          <h1 class="title">
-            Эффективные решения для вашего бизнеса
-          </h1>
+          <h1 class="title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" data-modal-open class="button">
             Заказать услугу
           </button>
@@ -139,7 +138,7 @@
                 alt="Человек держит телефон в руке"
               />
               <div class="item-description-bg">
-              <p class="our-work-title">Мобильные приложения</p>
+                <p class="our-work-title">Мобильные приложения</p>
               </div>
             </li>
             <li class="item">
@@ -149,7 +148,7 @@
                 alt="Человек держит планшет в руке"
               />
               <div class="item-description-bg">
-              <p class="our-work-title">Дизайнерские решения</p>
+                <p class="our-work-title">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
@@ -390,7 +389,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-contacts">
-          <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio">Studio</span>
           </a>
           <address class="footer-address">
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
@@ -409,7 +409,7 @@
           </address>
         </div>
 
-        <div class="subscribe">
+        <div class="enjoy">
           <strong class="title">присоединяйтесь</strong>
           <ul class="footer-icon-box">
             <li class="footer-link">
@@ -442,6 +442,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <strong class="title">подпишитесь на рассылку</strong>
+          <form action="#" name="subscribe" class="subscribe-form">
+            <div class="subscribe-boxes">
+              <input
+                name="subscribe-input"
+                class="subscribe-input-mail"
+                type="email"
+                autocomplete="on"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="button">
+                Подписаться<svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal class="backdrop is-hidden">
@@ -451,6 +470,86 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <b class="callback-title">Оставьте свои данные, мы вам перезвоним</b>
+        <form action="#" name="callback" class="callback-form">
+          <div class="callback-thumb">
+            <label class="callback-pretitle" for="name">Имя</label>
+            <div class="callback-input-box">
+              <input
+                class="callback-input"
+                id="name"
+                name="name"
+                type="text"
+                autocomplete="on"
+                autofocus
+                required
+              />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="callback-thumb">
+            <label class="callback-pretitle" for="phone">Телефон</label>
+            <div class="callback-input-box">
+              <input
+                class="callback-input"
+                id="phone"
+                name="phone"
+                type="tel"
+                autocomplete="on"
+                autofocus
+                required
+              />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="callback-thumb">
+            <label class="callback-pretitle" for="email">Почта</label>
+            <div class="callback-input-box">
+              <input
+                class="callback-input"
+                id="email"
+                name="email"
+                type="email"
+                autocomplete="on"
+                autofocus
+              />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="callback-thumb">
+            <label class="callback-pretitle" for="comments">Комментарий</label>
+            <textarea
+              class="comments"
+              name="comments"
+              id="comments"
+              cols="30"
+              rows="10"
+              placeholder="Введит текст"
+            ></textarea>
+          </div>
+          <div class="license">
+            <label class="license-label"
+              ><input
+                class="license-checkbox visually-hidden"
+                name="license"
+                type="checkbox"
+              /><span class="checkbox-icon"
+                ><svg class="icon-check" width="16" height="15">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              ><span class="license-agrements"
+                >Соглашаюсь с рассылкой и принимаю
+                <a href="" class="license-link">Условия договора</a></span
+              ></label
+            >
+          </div>
+          <button type="submit" class="button">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
