--- a/index.html
+++ b/index.html
@@ -498,7 +498,6 @@
                 name="phone"
                 type="tel"
                 autocomplete="on"
-                autofocus
                 required
               />
               <svg class="icon" width="18" height="18">
@@ -515,21 +514,20 @@
                 name="email"
                 type="email"
                 autocomplete="on"
-                autofocus
               />
               <svg class="icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
-          <div class="callback-thumb">
+          <div class="callback-thumb-comments">
             <label class="callback-pretitle" for="comments">Комментарий</label>
             <textarea
               class="comments"
               name="comments"
               id="comments"
               cols="30"
-              rows="10"
+              rows="7"
               placeholder="Введит текст"
             ></textarea>
           </div>
